# CourseWork-4

./: README.md  pyproject.toml
src/: ABCClasses.py  APIProcessorClasses.py  HandlerClasses.py  VacancyClass.py  abc_classes.py  classes.py  main.py
