[tool.poetry]
name = "kursach-4"
version = "0.1.0"
description = ""
authors = ["vavil <vavilon164@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
