[tool.poetry]
name = "kursach-4"
version = "0.1.0"
description = ""
authors = ["vavil <vavilon164@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
requests = "^2.31.0"


[tool.poetry.group.lint.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = false
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
